fix: fixing spacing in name service

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -102,14 +102,14 @@ body {
 }
 
 .loginInputStyle {
-  width: 100%;
-  padding: 12px;
-  border: none;
-  border-radius: 5px;
-  background-color: #fff;
-  font-size: 15px;
-  outline: none;
-  margin-top: 10px;
+	width: 100%;
+	padding: 12px;
+	border: none;
+	border-radius: 5px;
+	background-color: #fff;
+	font-size: 15px;
+	outline: none;
+	margin-top: 10px;
 }
 
 .loginLoginButton {
@@ -199,26 +199,26 @@ body {
 }
 
 .signupFormBox {
-  width: 500px;
-  background: #dee33e;
-  padding: 40px;
-  border-radius: 15px;
-  margin-top: 0px;
+	width: 500px;
+	background: #dee33e;
+	padding: 40px;
+	border-radius: 15px;
+	margin-top: 0px;
 }
 
 .signupInputLabel {
-  display: block;
-  margin-bottom: 4px;
-  font-size: 14px;
-  color: #333;
-  font-weight: 500;
+	display: block;
+	margin-bottom: 4px;
+	font-size: 14px;
+	color: #333;
+	font-weight: 500;
 }
 
 .signupFieldContainer {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  margin-right: 10px;
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+	margin-right: 10px;
 }
 
 .signupTitleStyle {
@@ -235,15 +235,15 @@ body {
 }
 
 .signupInputStyle {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 10px;
-  border: none;
-  border-radius: 5px;
-  background-color: #fff;
-  font-size: 15px;
-  outline: none;
-  margin-top: 5px;
+	width: 100%;
+	padding: 12px;
+	margin-bottom: 10px;
+	border: none;
+	border-radius: 5px;
+	background-color: #fff;
+	font-size: 15px;
+	outline: none;
+	margin-top: 5px;
 }
 
 .signupInputStyle::placeholder {
@@ -610,6 +610,7 @@ body {
 	border-radius: 8px;
 	font-size: 0.95rem;
 	background-color: #f9f9f9;
+	width: 100%;
 }
 
 textarea.modalBoxStyles {
@@ -770,35 +771,35 @@ textarea.modalBoxStyles {
 /* ServiceCard */
 
 .serviceCardContainer {
-  display: flex;
-  padding: 20px;
-  margin-top: 15px;
-  background-color: #fff;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  align-items: center;
-  flex-wrap: wrap;
-  transition: all 0.1s ease;
+	display: flex;
+	padding: 20px;
+	margin-top: 15px;
+	background-color: #fff;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+	border-radius: 8px;
+	align-items: center;
+	flex-wrap: wrap;
+	transition: all 0.1s ease;
 }
 
 .serviceCardContainer:hover {
-  transform: scale(1.01);
+	transform: scale(1.01);
 }
 
 .servicePriceArea {
-  color: #8a8a15;
+	color: #8a8a15;
 }
 
 .serviceDurationArea {
-  display: flex;
-  color: #5f5f5f;
+	display: flex;
+	color: #5f5f5f;
 }
 
 .clockIcon {
-  width: 16px;
-  height: 16px;
-  margin-right: 5px;
-  vertical-align: middle;
+	width: 16px;
+	height: 16px;
+	margin-right: 5px;
+	vertical-align: middle;
 }
 
 .serviceCardInfo {
@@ -912,9 +913,9 @@ textarea.modalBoxStyles {
 }
 
 .serviceInputLabel {
-  display: flex;
-  flex-direction: column;
-  row-gap: 15px;
+	display: flex;
+	flex-direction: column;
+	row-gap: 15px;
 }
 
 .serviceModalPriceAndDurationFields {
@@ -924,11 +925,11 @@ textarea.modalBoxStyles {
 }
 
 .servicePriceAndDurationModalInputs {
-  border: none;
-  background-color: #f5f5f5;
-  padding: 15px 10px;
-  border-radius: 5px;
-  width: 100%;
+	border: none;
+	background-color: #f5f5f5;
+	padding: 15px 10px;
+	border-radius: 5px;
+	width: 100%;
 }
 
 .serviceModalTextArea {
